<resources>
    <string name="app_name">GG Vertretung</string>
    <string name="userName">Benutzername</string>
    <string name="password">Passwort</string>
    <string name="showPassword">Anzeigen</string>
    <string name="confirm">Bestätigen</string>
    <string name="content_description">Goethe-Gymnasium Bad Ems\nVertretungsplan-App von Jan Niklas Forro</string>
    <string name="update_available">Es ist ein Update verfügbar. Tippe hier, um zum Download zu gelangen.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="settings">Einstellungen</string>
    <string name="information">Informationen</string>
    <string name="standardview">Horizontale Ansicht</string>
    <string name="teacher">Lehrer</string>
    <string name="student">Schüler</string>
    <string name="title_activity_display_preference_settings">Anzeigeeinstellungen</string>
    <string name="classes">Klassen/Kurse</string>
    <string name="showOnlyOwn">Nur eigene Vertretungen anzeigen</string>
    <string name="showOnlyOwnDescription">Es werden nur die Vertretungen der Klassen und Kurse angezeigt, die unten
        eingetragen werden
    </string>
    <string name="faq">FAQ</string>
    <string name="todownload">Zum Download</string>
    <string name="please_report_bugs">Wünsche und Verbesserungsvorschläge können gerne per E-Mail an mich gesendet
        werden.
        Falls Dir/Ihnen ein Fehler auffällt freue, ich mich über einen Hinweis. Dazu kann die Schaltfläche unten
        verwendet werden.
    </string>

    <string name="licenses">Lizenzen</string>
    <string name="icon_license">Icons aus Android-externen Quellen: \nhttps://icons8.de/icons</string>
    <string name="privacy_policy">Datenschutzerklärung</string>
    <string name="privacy_policy_text">Die App erhebt keinerlei anonymen oder personenbezogenen Daten. Änderungen der Datenschutzerklärung sind vorbehalten und werden in der App kenntlich gemacht.</string>
    <string name="overview">Übersicht</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_information_menu">Informationen</string>
    <string name="title_activity_license_list">Lizenzen</string>
</resources>
