<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="de.forro_apps.ggvertretungsplan.LoginActivity">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:layout_marginTop="207dp"
            android:id="@+id/userName"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_below="@+id/userName" android:layout_alignLeft="@+id/userName"
            android:layout_alignStart="@+id/userName" android:id="@+id/password"
            android:inputType="textPassword"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_above="@+id/password"
            android:layout_centerHorizontal="true" android:layout_marginBottom="45dp" android:id="@+id/authFailed"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/gg"
            android:id="@+id/imageView"
            android:layout_marginTop="35dp" android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" android:contentDescription="@string/content_description"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_above="@+id/authFailed" android:layout_centerHorizontal="true"/>
    <TextView
            android:text="@string/update_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignParentBottom="true"
            android:id="@+id/update" android:layout_alignParentStart="true"
            android:textColor="@android:color/holo_orange_dark" android:textAlignment="center" android:textSize="17sp"
            android:visibility="visible"/>
    <ImageButton
            android:layout_width="wrap_content"
            app:srcCompat="@android:drawable/ic_menu_view"
            android:id="@+id/showPassword" android:layout_alignBottom="@+id/password"
            android:layout_toEndOf="@+id/userName" android:layout_height="wrap_content"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password" android:layout_centerHorizontal="true" android:id="@+id/toggleWrapper">
        <ToggleButton
                android:text="@string/student"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/studentToggleButton" android:layout_below="@+id/showPassword"
                android:layout_alignEnd="@+id/authFailed" android:checked="false"
                android:textOn="@string/student" android:textOff="@string/student" android:layout_weight="1"/>
        <ToggleButton
                android:text="@string/teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_alignBottom="@+id/studentToggleButton"
                android:layout_toEndOf="@+id/studentToggleButton" android:id="@+id/teacherToggleButton"
                android:textOff="@string/teacher" android:textOn="@string/teacher" android:checked="false"
                android:layout_weight="1"/>
    </LinearLayout>
    <Button
            android:text="@string/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" android:id="@+id/confirm" android:layout_below="@+id/toggleWrapper"/>
</RelativeLayout>
