<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_information_menu"
        tools:context=".menus.InformationMenu">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" tools:layout_editor_absoluteY="8dp"
            tools:layout_editor_absoluteX="8dp">
        <Button
                android:text="@string/faq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/faqButton"
                style="@style/Widget.AppCompat.Button.Borderless" android:gravity="center|start"
                android:textSize="18sp" android:textStyle="bold" android:textColor="@android:color/darker_gray"
        />
        <Button
                android:text="@string/privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/privacyPolicy"
                style="@style/Widget.AppCompat.Button.Borderless" android:gravity="center|start"
                android:textSize="18sp" android:textStyle="bold" android:textColor="@android:color/darker_gray"
        />
        <Button
                android:text="@string/todownload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/toDownload"
                style="@style/Widget.AppCompat.Button.Borderless" android:gravity="center|start"
                android:textSize="18sp" android:textStyle="bold" android:textColor="@android:color/darker_gray"
        />
        <Button
                android:text="@string/licenses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/licenses"
                style="@style/Widget.AppCompat.Button.Borderless" android:gravity="center|start"
                android:textSize="18sp" android:textStyle="bold" android:textColor="@android:color/darker_gray"
        />
        <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:textAlignment="center"
                android:background="@color/colorAccent" android:minHeight="6dp"/>
        <TextView
                android:text="@string/please_report_bugs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/please_report_bugs" android:textSize="12sp"
                android:gravity="center"/>
        <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:textAlignment="center"
                android:background="@color/colorAccent" android:minHeight="8dp"/>
        <TextView
                android:text="@string/content_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/appInformation"
                android:textStyle="bold" android:textSize="12sp"
                android:gravity="center_horizontal" tools:layout_editor_absoluteY="155dp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="10dp">
        <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true" app:srcCompat="@android:drawable/ic_dialog_email"
                android:id="@+id/contact_email_button" android:layout_weight="1"
                android:layout_margin="@dimen/fab_margin" android:visibility="invisible"
                app:backgroundTint="@android:color/holo_green_light"/>
        <android.support.design.widget.FloatingActionButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true" app:srcCompat="@drawable/ic_twitter"
                android:id="@+id/contact_twitter_button" android:layout_weight="1"
                android:layout_margin="@dimen/fab_margin" android:visibility="invisible"/>
        <android.support.design.widget.FloatingActionButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true" app:srcCompat="@drawable/ic_instagram"
                android:id="@+id/contact_instagram_button" android:layout_weight="1"
                android:layout_margin="@dimen/fab_margin" android:visibility="invisible"
                app:backgroundTint="@android:color/holo_purple"/>

        <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/fab_margin"
                app:srcCompat="@android:drawable/ic_dialog_email" android:layout_weight="1"
                app:backgroundTint="@android:color/holo_red_light"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>